--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 20px;
+            padding: 10px;
             box-sizing: border-box;
             overflow-y: auto;
         }
         .page h1 {
-            margin: 20px 0;
+            margin: 15px 0;
             text-align: center;
             color: #333;
+            font-size: 1.5rem;
         }
 
         header {
             background-color: #ff6347;
             color: white;
             text-align: center;
-            padding: 1rem;
+            padding: 0.5rem;
             position: sticky;
             top: 0;
             z-index: 10;
+            font-size: 0.9rem;
         }
 
         .slider {
@@ -52,7 +54,7 @@
             overflow: hidden;
             position: relative;
             width: 100%;
-            height: 300px;
+            height: 200px;
             margin-bottom: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -73,7 +75,7 @@
         .slide img {
             max-width: 100%;
             border-radius: 10px;
-            height: 200px;
+            height: 150px;
             object-fit: cover;
         }
 
@@ -85,17 +87,17 @@
             overflow: hidden;
             text-align: left;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin: 1rem 0;
-            max-width: 600px;
+            margin: 0.5rem 0;
+            max-width: 100%;
             width: 100%;
             padding: 10px;
         }
         .menu-item img {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
             object-fit: cover;
             border-radius: 8px;
-            margin-right: 20px;
+            margin-right: 15px;
         }
         .menu-item .details {
             flex: 2;
@@ -108,7 +110,7 @@
             background-color: #f8f8f8;
             border: 1px solid #ddd;
             border-radius: 5px;
-            padding: 5px 10px;
+            padding: 5px;
             margin: 5px 0;
         }
 
@@ -116,9 +118,10 @@
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 1rem;
+            padding: 0.5rem;
             position: sticky;
             bottom: 0;
+            font-size: 0.8rem;
         }
     </style>
 </head>
