--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
+            overflow: hidden;
         }
+
         .book {
             display: flex;
             width: 100vw;
             height: 100vh;
-            scroll-snap-type: x mandatory;
-            overflow-x: scroll;
-            overflow-y: hidden;
+            overflow: hidden;
+            position: relative;
         }
+
         .page {
             width: 100vw;
             height: 100vh;
             flex-shrink: 0;
-            scroll-snap-align: start;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -31,6 +31,7 @@
             box-sizing: border-box;
             overflow-y: auto;
         }
+
         .page h1 {
             margin: 15px 0;
             text-align: center;
@@ -43,10 +44,8 @@
             color: white;
             text-align: center;
             padding: 0.5rem;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-            font-size: 0.9rem;
+            font-size: 1rem;
+            width: 100%;
         }
 
         .slider {
@@ -59,10 +58,12 @@
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
+
         .slides {
             display: flex;
             transition: transform 0.5s ease-in-out;
         }
+
         .slide {
             min-width: 100%;
             text-align: center;
@@ -72,6 +73,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .slide img {
             max-width: 100%;
             border-radius: 10px;
@@ -92,6 +94,7 @@
             width: 100%;
             padding: 10px;
         }
+
         .menu-item img {
             width: 80px;
             height: 80px;
@@ -99,13 +102,16 @@
             border-radius: 8px;
             margin-right: 15px;
         }
+
         .menu-item .details {
             flex: 2;
         }
+
         .menu-item .prices {
             flex: 1;
             text-align: center;
         }
+
         .menu-item .prices p {
             background-color: #f8f8f8;
             border: 1px solid #ddd;
@@ -119,9 +125,32 @@
             color: white;
             text-align: center;
             padding: 0.5rem;
-            position: sticky;
-            bottom: 0;
             font-size: 0.8rem;
+            width: 100%;
+        }
+
+        .nav-buttons {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
+        }
+
+        .nav-buttons button {
+            padding: 10px 15px;
+            background-color: #ff6347;
+            border: none;
+            border-radius: 5px;
+            color: white;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        .nav-buttons button:disabled {
+            background-color: #ddd;
+            cursor: not-allowed;
         }
     </style>
 </head>
@@ -227,18 +256,4 @@
 
 <footer>
     <p>&copy; 2024 Your Restaurant Name | All Rights Reserved</p>
-    <p>Contact us: (555) 123-4567 | 123 Main Street, Your City</p>
-</footer>
-
-<script>
-    const slides = document.querySelector('.slides');
-    let currentSlide = 0;
-
-    setInterval(() => {
-        currentSlide = (currentSlide + 1) % 3;
-        slides.style.transform = `translateX(-${currentSlide * 100}%)`;
-    }, 3000);
-</script>
-
-</body>
-</html>
+    <p>Contact us: (555
