--- a/index.html
+++ b/index.html
@@ -9,43 +9,42 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow-x: hidden;
         }
-
         .book {
             display: flex;
             width: 100vw;
             height: 100vh;
-            overflow: hidden;
-            position: relative;
+            scroll-snap-type: x mandatory;
+            overflow-x: scroll;
+            overflow-y: hidden;
         }
-
         .page {
             width: 100vw;
             height: 100vh;
             flex-shrink: 0;
+            scroll-snap-align: start;
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding: 10px;
+            padding: 20px;
             box-sizing: border-box;
             overflow-y: auto;
         }
-
         .page h1 {
-            margin: 15px 0;
+            margin: 20px 0;
             text-align: center;
             color: #333;
-            font-size: 1.5rem;
         }
 
         header {
             background-color: #ff6347;
             color: white;
             text-align: center;
-            padding: 0.5rem;
-            font-size: 1rem;
-            width: 100%;
+            padding: 1rem;
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
 
         .slider {
@@ -53,17 +52,15 @@
             overflow: hidden;
             position: relative;
             width: 100%;
-            height: 200px;
+            height: 300px;
             margin-bottom: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
-
         .slides {
             display: flex;
             transition: transform 0.5s ease-in-out;
         }
-
         .slide {
             min-width: 100%;
             text-align: center;
@@ -73,11 +70,10 @@
             justify-content: center;
             align-items: center;
         }
-
         .slide img {
             max-width: 100%;
             border-radius: 10px;
-            height: 150px;
+            height: 200px;
             object-fit: cover;
         }
 
@@ -89,34 +85,30 @@
             overflow: hidden;
             text-align: left;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin: 0.5rem 0;
-            max-width: 100%;
+            margin: 1rem 0;
+            max-width: 600px;
             width: 100%;
             padding: 10px;
         }
-
         .menu-item img {
-            width: 80px;
-            height: 80px;
+            width: 100px;
+            height: 100px;
             object-fit: cover;
             border-radius: 8px;
-            margin-right: 15px;
+            margin-right: 20px;
         }
-
         .menu-item .details {
             flex: 2;
         }
-
         .menu-item .prices {
             flex: 1;
             text-align: center;
         }
-
         .menu-item .prices p {
             background-color: #f8f8f8;
             border: 1px solid #ddd;
             border-radius: 5px;
-            padding: 5px;
+            padding: 5px 10px;
             margin: 5px 0;
         }
 
@@ -124,33 +116,9 @@
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 0.5rem;
-            font-size: 0.8rem;
-            width: 100%;
-        }
-
-        .nav-buttons {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 10px;
-        }
-
-        .nav-buttons button {
-            padding: 10px 15px;
-            background-color: #ff6347;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            font-size: 1rem;
-            cursor: pointer;
-        }
-
-        .nav-buttons button:disabled {
-            background-color: #ddd;
-            cursor: not-allowed;
+            padding: 1rem;
+            position: sticky;
+            bottom: 0;
         }
     </style>
 </head>
@@ -193,31 +161,81 @@
                 <p>250/-</p>
             </div>
         </div>
+        <div class="menu-item">
+            <img src="paneer_tikka.jpg" alt="Starter 2">
+            <div class="details">
+                <h2>Paneer Tikka</h2>
+                <p>Grilled cottage cheese with aromatic spices.</p>
+            </div>
+            <div class="prices">
+                <p>300/-</p>
+            </div>
+        </div>
     </div>
 
-    <!-- Add Main Course -->
-    <!-- Add Drinks -->
-    <!-- Add Desserts -->
+    <!-- Page 2: Main Course -->
+    <div class="page" style="background-color: #fff8dc;">
+        <h1>Main Course</h1>
+        <div class="menu-item">
+            <img src="chicken mandi.jpg" alt="Main Course 1">
+            <div class="details">
+                <h2>Chicken Mandi</h2>
+                <p>Arabic-style rice and chicken, perfectly spiced.</p>
+            </div>
+            <div class="prices">
+                <p>Single: 299/-</p>
+                <p>Couple: 399/-</p>
+                <p>Medium: 699/-</p>
+                <p>Large: 999/-</p>
+            </div>
+        </div>
+    </div>
 
+    <!-- Page 3: Drinks -->
+    <div class="page" style="background-color: #e6f7ff;">
+        <h1>Cool Drinks & Juices</h1>
+        <div class="menu-item">
+            <img src="banana juice.jpg" alt="Drink 1">
+            <div class="details">
+                <h2>Banana Juice</h2>
+                <p>Freshly blended banana juice, served chilled.</p>
+            </div>
+            <div class="prices">
+                <p>100/-</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Page 4: Desserts -->
+    <div class="page" style="background-color: #fff0f5;">
+        <h1>Desserts & Ice Creams</h1>
+        <div class="menu-item">
+            <img src="chocolate_image.jpg" alt="Dessert 1">
+            <div class="details">
+                <h2>Chocolate Ice Cream</h2>
+                <p>Rich and creamy chocolate ice cream.</p>
+            </div>
+            <div class="prices">
+                <p>150/-</p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <footer>
     <p>&copy; 2024 Your Restaurant Name | All Rights Reserved</p>
-    <p>Contact us: (555) 123-4567</p>
+    <p>Contact us: (555) 123-4567 | 123 Main Street, Your City</p>
 </footer>
 
 <script>
-    const pages = document.querySelectorAll('.page');
-    const navButtons = document.querySelector('.nav-buttons');
-    let currentPage = 0;
+    const slides = document.querySelector('.slides');
+    let currentSlide = 0;
 
-    function showPage(index) {
-        document.querySelector('.book').style.transform = `translateX(-${index * 100}%)`;
-    }
-
-    document.querySelectorAll('.nav-buttons button').forEach((btn, index) => {
-        btn.addEventListener('click', () => showPage(index));
-    });
+    setInterval(() => {
+        currentSlide = (currentSlide + 1) % 3;
+        slides.style.transform = `translateX(-${currentSlide * 100}%)`;
+    }, 3000);
 </script>
+
 </body>
 </html>
