--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
             color: white;
             text-align: center;
             padding: 1rem;
-            position: sticky;
-            top: 0;
-            z-index: 10;
         }
 
         .slider {
@@ -117,8 +114,6 @@
             color: white;
             text-align: center;
             padding: 1rem;
-            position: sticky;
-            bottom: 0;
         }
     </style>
 </head>
@@ -162,9 +157,9 @@
             </div>
         </div>
         <div class="menu-item">
-            <img src="paneer_tikka.jpg" alt="Starter 2">
+            <img src="chicken nuggets.jpg" alt="Starter 2">
             <div class="details">
-                <h2>Paneer Tikka</h2>
+                <h2>Chicken Nuggets</h2>
                 <p>Grilled cottage cheese with aromatic spices.</p>
             </div>
             <div class="prices">
@@ -210,7 +205,7 @@
     <div class="page" style="background-color: #fff0f5;">
         <h1>Desserts & Ice Creams</h1>
         <div class="menu-item">
-            <img src="chocolate_image.jpg" alt="Dessert 1">
+            <img src="chocolate image.jpg" alt="Dessert 1">
             <div class="details">
                 <h2>Chocolate Ice Cream</h2>
                 <p>Rich and creamy chocolate ice cream.</p>
